# llm-playground

./: .env.example  .gitignore  pyproject.toml
00_customer_support/: notebook.ipynb
01_meeting_followup/: notebook.ipynb
02_trend_farmer/: notebook.ipynb
